--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,10 @@ schedule==1.2.0
 boto3==1.34.0
 pandas>=2.2.0
 requests==2.31.0
-python-dotenv==1.0.0 
+python-dotenv==1.0.0
+openai>=1.0.0
+aiohttp>=3.8.0
+dash>=2.14.0
+dash-bootstrap-components>=1.5.0
+plotly>=5.15.0
+asyncio 
